--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <a class="nav-link active"href="#two">felaDATOK</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active"href="#three">Three</a>
+                <a class="nav-link active"href="#three">Thre</a>
             </li>
           </ul>
         </nav>
