--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
     <link rel="stylesheet" href="css/style.css">
-    <title>Buzi a Milán</title>
+    <title>hell0</title>
 </head>
 <body class="bg-dark">
     <div class="container-fluid">
@@ -21,12 +21,30 @@
                 <a class="nav-link active"href="#two">felaDATOK</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active"href="#three">Thre</a>
+                <a class="nav-link active"href="#three">three</a>
             </li>
           </ul>
         </nav>
         <article id="one">
-          <h3 class="text-light text-center">Alcímek</h3>         
+          <h3 class="text-light text-center">Csapatok</h3>    
+          <div class="container">
+            <div class="row" id="teams">
+              <div class="col-md-4 card">
+                <h4>csapatnevek</h4>
+                <img src="img/calories.jpg"  class="img-thumbnail">
+              </div>
+              <div class="col-md-4 card">
+                <h4>csapatnevek</h4>
+                <img src="img/titanic.jpg"  class="img-thumbnail">
+              </div>
+              <div class="col-md-4 card">
+                <h4>csapatnevek</h4>
+                <img src="img/ego.jpg"  class="img-thumbnail">
+              </div>
+            </div>
+
+
+          </div>
         </article>
 
         <article id="two">
